--- a/style/style.css
+++ b/style/style.css
@@ -36,10 +36,12 @@ header {
     border-radius: 10px;
 }
 main {
-    margin: 10% 20%;
+    
+    padding: 5% 0% 5% 4%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 10px;
+    
     
 }
 .informacoes {
@@ -47,46 +49,63 @@ main {
     width: 50%;
     text-align: center;
     display: flex;
-    flex-direction: column;
-    gap: 40px;
+    flex-direction:column;
+    justify-content: baseline;
+    
 }
 .informacoes__titulo {
     font-size: 2,5rem;
     font-family: 'Libre Baskerville', serif;
 }
+strong{
+    color:var(--cor-Primaria)
+}
 .informacoes__conteudo {
-    font-family: 'Lobster', cursive;
+    font-family: 'Lobster','cursive';
     color: var(--cor-tercearia);
     font-size: 1,5rem;
+    
      
 }
 .imagem {
-    width: 50%;
-    height: 50%;      
+
+    width: 30%;
+    height: 30%;      
 }
 footer {
     background-color: var(--cor-Primaria);
     color: var(--cor-tercearia);
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     text-align: center;
-    font-family: 'Libre baskerville', serif;
-    font-size: 2,5rem;
-}
-.links {
-    display: flex;
-    justify-content: space-around;
     font-family: 'Libre baskerville', serif;
     font-size: 1,5rem;
 }
+a:hover{
+    background-color: var(--cor-tercearia);
+    color: var(--cor-quartenaria);
+}
+.links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-family: 'Libre baskerville', serif;
+    font-size: 1,5rem;
+    gap: 3px;
+    
+}
 .links__link {
     background-color: var(--cor-secundaria);
-    padding: 21px;
+    padding: 10px;
     color: var(--cor-tercearia);
     font-family: 'Libre Baskerville', serif;
-    width: 200px;
-    font-size: 30px;
+    width: 100px;
+    font-size: 0.5rem;
     text-decoration: none;
     text-align: center;
     border-radius: 10px;
+    
 }
 @media(max-width:1200px){
     main{
